[gd_scene load_steps=14 format=3 uid="uid://cnf7uxitqqsp0"]

[ext_resource type="Script" path="res://player/player.gd" id="1_nykhc"]
[ext_resource type="Resource" uid="uid://dc3lfvd4pxajl" path="res://enemies/ladybug_stats.tres" id="2_l02t3"]
[ext_resource type="Texture2D" uid="uid://bvkwubo1vfah7" path="res://raw_assets/ladybug.png" id="4_6mnwj"]
[ext_resource type="Script" path="res://components/movement_component.gd" id="4_55meb"]
[ext_resource type="Script" path="res://state_machine/state_machine.gd" id="5_58h0d"]
[ext_resource type="Script" path="res://state_machine/wander_state.gd" id="6_rmcks"]
[ext_resource type="Script" path="res://state_machine/follow_state.gd" id="7_0fl0q"]
[ext_resource type="Script" path="res://state_machine/idle_state.gd" id="9_31w0m"]
[ext_resource type="Script" path="res://components/health_component.gd" id="17_acq0i"]
[ext_resource type="Texture2D" uid="uid://dnxdpytdysujv" path="res://raw_assets/barHorizontal_gray.png" id="18_eo7p5"]
[ext_resource type="Texture2D" uid="uid://bmmwqtijnifek" path="res://raw_assets/barHorizontal_red.png" id="19_dkxu8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tk7ry"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6mnwj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6mnwj")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3tja1"]
radius = 13.0

[node name="Ladybug" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 65
floor_constant_speed = true
floor_max_angle = 3.14159
floor_snap_length = 10.0
script = ExtResource("1_nykhc")
stats = ExtResource("2_l02t3")

[node name="Animation" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -19)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_tk7ry")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3tja1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 39

[node name="Hitbox" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-27, 1, 40, 4, 39, -13, 27, -17, 11, -33, -7, -34, -22, -23, -27, -11)

[node name="MovementComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_55meb")
actor = NodePath("..")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_58h0d")
initial_state = NodePath("IdleState")

[node name="WanderState" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "movement_component", "close_state", "far_state")]
script = ExtResource("6_rmcks")
enemy = NodePath("../..")
movement_component = NodePath("../../MovementComponent")
close_state = NodePath("../FollowState")
far_state = NodePath("../IdleState")
max_wander_distance = 1500.0
min_wander_distance = 1000.0

[node name="FollowState" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "movement_component", "close_state", "far_state")]
script = ExtResource("7_0fl0q")
enemy = NodePath("../..")
movement_component = NodePath("../../MovementComponent")
close_state = NodePath("../IdleState")
far_state = NodePath("../WanderState")
max_follow_distance = 1000.0
min_follow_distance = 50.0

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "next_state")]
script = ExtResource("9_31w0m")
enemy = NodePath("../..")
next_state = NodePath("../WanderState")
max_idle_distance = 1500.0

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("17_acq0i")
actor = NodePath("..")

[node name="TextureProgressBar" type="TextureProgressBar" parent="HealthComponent"]
offset_left = -29.0
offset_top = -49.0
offset_right = 171.0
offset_bottom = -23.0
scale = Vector2(0.302543, 0.35725)
step = -1.0
value = 100.0
fill_mode = 1
texture_under = ExtResource("18_eo7p5")
texture_progress = ExtResource("19_dkxu8")

[connection signal="area_entered" from="Area2D" to="." method="_on_attack_entered"]
